# TVT25KMO_Cpp_Harjoitukset

./: README.md
H1/: functions.cpp  main.cpp
H1/H1_3/: main.cpp
Kotitehtävät/H2a/: car.cpp  car.h  main.cpp  rectangle.h  student.cpp  student.h
Kotitehtävät/H2b/: car.cpp  car.h  main.cpp
Kotitehtävät/H4/H4/: CMakeLists.txt  car.cpp  car.h  engine.h  main.cpp  wheel.cpp  wheel.h
Kotitehtävät/H5/: classa1.cpp  classa1.h  classa2.cpp  main.cpp
Kotitehtävät/h3a/: chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
Kotitehtävät/h3b/: CMakeLists.txt  animal.cpp  animal.h  dog.cpp  dog.h  main.cpp
Lisätehtävät/Lisatehtava_1/: car.cpp  car.h  main.cpp
Lisätehtävät/Lisatehtava_2/: CMakeLists.txt  car.cpp  car.h  main.cpp
Lisätehtävät/Lisatehtava_3/: CMakeLists.txt  car.cpp  car.h  main.cpp
Luentoesimerkit H1/H1_2/: main.cpp
Luentoesimerkit H1/H1_5/: functions.cpp  functions.h  main.cpp
Luentoesimerkit H2a/H2a_1/: henkilo.cpp  main.cpp
Luentoesimerkit H2a/H2a_2/: henkilo.cpp
Luentoesimerkit H2a/H2a_3/: main.cpp
Luentoesimerkit H2b/H2b1/: tuote.cpp
Luentoesimerkit H2b/H2b2/: CMakeLists.txt  main.cpp  tuote.h
Luentoesimerkit H2b/H2b3/: CMakeLists.txt  main.cpp
Luentoesimerkit H2b/H2b4/: CMakeLists.txt  main.cpp
Luentoesimerkit/AbstraktiLuokka/: CMakeLists.txt  animal.cpp  animal.h  cat.cpp  cat.h  dog.cpp  dog.h  main.cpp
Luentoesimerkit/Calculator/: CMakeLists.txt
Luentoesimerkit/H1/: CMakeLists.txt  functions.h  main.cpp
Luentoesimerkit/H1/.qtcreator/: CMakeLists.txt.user.2a73e8c
Luentoesimerkit/Interface/: CMakeLists.txt  imyinterface.h  main.cpp  testclass.cpp  testclass.h
Luentoesimerkit/Luentoesimerkit H1/H1_1/: main.cpp
Luentoesimerkit/Luentoesimerkit H1/H1_4/: main.cpp
Luentoesimerkit/Luentoesimerkit H1/H1_5/: CMakeLists.txt
Luentoesimerkit/Luentoesimerkit H1/H1_6/: main.cpp
Luentoesimerkit/Luentoesimerkit H2a/H2a_1/: henkilo.h
Luentoesimerkit/Luentoesimerkit H2a/H2a_2/: henkilo.h  main.cpp
Luentoesimerkit/Luentoesimerkit H2a/H2a_3/: henkilo.cpp  henkilo.h
Luentoesimerkit/Luentoesimerkit H2b/H2b1/: CMakeLists.txt  main.cpp
Luentoesimerkit/Luentoesimerkit H4/H4_1/: CMakeLists.txt  address.cpp  address.h  person.cpp  person.h
Luentoesimerkit/Luentoesimerkit H4/H4_2/: CMakeLists.txt  main.cpp  person.cpp  person.h
Luentoesimerkit/Luentoesimerkit H4/kompositio_t1/: address.cpp  address.h  main.cpp  person.cpp  person.h
Luentoesimerkit/QtWidgetEsim1/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  page2.cpp  page2.h  page2.ui  style.qss
Luentoesimerkit/StaattinenLuokka/: CMakeLists.txt  main.cpp  mystaticclass.cpp
Luentoesimerkit/WidgetEsim2/: CMakeLists.txt  form1.cpp  form1.h  form1.ui  form2.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  person.cpp  person.h
Luentoesimerkit/httpEsim1/: CMakeLists.txt  environment.cpp  environment.h  httpperson.cpp  httpperson.h  main.cpp
Luentoesimerkit/perinta_esim2/: CMakeLists.txt  main.cpp  pesukone.cpp  pesukone.h  televisio.cpp  tuote.cpp  tuote.h
Luentoesimerkit/pointer/: CMakeLists.txt  main.cpp
Luentoesimerkit/vektorit/: main.cpp
